<resources>
    <string name="app_name">PayMob task</string>
    <string name="converter_title">Convert Currency</string>
    <string name="converter_subtitle">Real-time exchange rates </string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="amount_hint">Amount</string>
    <string name="converted_hint">Converted Amount</string>
    <string name="swap_currencies">Swap currencies</string>
    <string name="retry">Retry</string>
    <string name="error_icon">Error icon</string>
    <string name="rate_info_label">Rates are updated periodically</string>
    <string name="no_internet">No internet connection</string>
    <string name="api_error">An API error occurred</string>
    <string name="unknown_error">An unexpected error occurred</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_history">no_history</string>
</resources>